--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="tx_green">@color/take</color>
     <color name="tx_red">@color/give</color>
-    <color name="tx_pending">@color/gradientPink</color>
-    <color name="tx_failed">@color/moneroFab</color>
+    <color name="tx_pending">@color/moneroFab</color>
+    <color name="tx_failed">@color/moneroBlack</color>
 
     <color name="gradientOrange">#FFFF6105</color>
     <color name="gradientPink">#FFF0006B</color>
@@ -18,6 +18,7 @@
     <color name="moneroOrange">#cc5100</color>
     <color name="moneroWhite">#ffffff</color>
     <color name="moneroBlack">#000000</color>
+    <color name="moneroBlue">#1F4E97</color>
     <color name="moneroGray">#FD9B9B9B</color>
 
     <color name="dotGray">#FF4A4A4A</color>
