--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
 
     <color name="moneroWhite">#ffffff</color>
     <color name="moneroBlack">#000000</color>
-    <color name="moneroBlue">#1F4E97</color>
+    <color name="moneroBlue">#1f4e97</color>
     <color name="moneroGray">#FD9B9B9B</color>
 
     <color name="moneroStreetA">#D81F0759</color>
