Added the values to the onboarding screens.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="moneroOrange">#cc5100</color>
     <color name="moneroWhite">#ffffff</color>
     <color name="moneroBlack">#000000</color>
-    <color name="moneroBlue">#1F4E97</color>
+    <color name="moneroBlue">#1f4e97</color>
     <color name="moneroGray">#FD9B9B9B</color>
 
     <color name="dotGray">#FF4A4A4A</color>
