Update for better translation

--- a/app/src/main/res/values-zh-rTW/help.xml
+++ b/app/src/main/res/values-zh-rTW/help.xml
@@ -7,8 +7,7 @@
         這個密碼是用來保護你在這個裝置上的錢包資料，請使用足夠強度的密碼。</p>
         <h2>請抄寫你的記憶種子碼!</h2>
         <p>在下一個步驟將會顯示你的25字 \"記憶種子碼\"。
-        這是你唯一需要用來回復錢包的資訊。
-        並且可以用來取用錢包的完全權限。
+        這是你在未來想回復錢包並且取得完整權限時所需的唯一資訊。
         妥善保護好這份種子碼是相當重要的事情，因為它可以給予<em>任何人</em>
         對你的錢包操作的權限!</p>
         <p>如果你忘記錢包密碼，你依然能夠使用記憶種子碼來回復你的錢包。</p>
@@ -54,7 +53,7 @@
         <h1>錢包詳細資訊</h1>
         <h2>公開地址</h2>
         你的公開地址就像是銀行帳號一樣可以與他人分享而不需要擔心
-        會失去你的，其他人可以透過這個地址發送Monero到你的錢包。
+        會失去你的Monero，其他人可以透過這個地址發送Monero到你的錢包。
         <h2>記憶種子碼</h2>
         這是你唯一需要用來回復錢包的資訊並且可以用來取用錢包的完全權限。妥善保護好這份種子碼是相當重要的事情，因為它可以給予<em>任何人</em>對你的錢包操作的權限! 如果你還尚未在安全的地方抄寫保存這份種子碼，請盡速進行。
         <h2>查看金鑰</h2>
@@ -142,7 +141,7 @@
         Monerujo開發團隊與XMR.TO並無相關，無法為你解決其服務上的問題</p>
         <h2>XMR.TO 匯率<h2>
         <p>在 \"金額\" 的頁面中你將看到 XMR.TO 服務的參數。包含了匯率以及BTC金額的上下限。
-        請注意這個階段顯示的匯率並不是確定的。你也可以看到多少金額的可以進行零確認XMR的BTC發送(詳見 XMR.TO的FAQ以了解更多)。請注意XMR.TO並不額外收取手續費用，是不是很棒呢?</p>
+        請注意這個階段顯示的匯率並不是確定的。你也可以看到在多少金額之下可以直接發送BTC，而不用等待XMR的確認。(詳見 XMR.TO的FAQ以了解更多)。請注意XMR.TO並不額外收取手續費用，是不是很棒呢?</p>
         <h2>XMR.TO 訂單<h2>
         <p>在 \"確認\" 的頁面中，你將可以看到正式的XMR.TO訂單。這訂單僅在一段時間內有效。你可以在 \"發送\" 的按鈕上看到倒數計時。這時的匯率可能與前一個頁面顯示的不同</p>
         <h2>XMR.TO 私鑰<h2>
